src/main/java/com/example/vtpnano/errors/ErrorDetails.java
package com.example.vtpnano.errors;

import org.springframework.context.MessageSource;
import org.springframework.http.HttpHeaders;
import org.springframework.http.HttpStatusCode;
import org.springframework.http.ProblemDetail;

import java.util.Locale;

public enum Error implements  {






}
